# ChangeLog for sys-apps/calculate-install
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-install-2.2.0.0_p20100930-r3 (01 Oct 2010)

  01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100930-r2.ebuild,
  +calculate-install-2.2.0.0_p20100930-r4.ebuild:
  Update version for ntfs mount points support.

*calculate-install-2.2.0.0_p20100930-r2 (01 Oct 2010)

  01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100930-r1.ebuild,
  +calculate-install-2.2.0.0_p20100930-r2.ebuild:
  Update version for fix work of --live option.

*calculate-install-2.2.0.0_p20100930-r1 (01 Oct 2010)

  01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100930.ebuild,
  +calculate-install-2.2.0.0_p20100930-r1.ebuild:
  Update version for fix initrd optimization.

*calculate-install-2.2.0.0_p20100930 (30 Sep 2010)

  30 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100921.ebuild,
  -calculate-install-2.2.0.0_p20100929.ebuild,
  +calculate-install-2.2.0.0_p20100930.ebuild:
  Daily update.

*calculate-install-2.2.0.0_p20100929 (29 Sep 2010)

  29 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-2.2.0.0_p20100929.ebuild:
  Daily update. Added depend squashfs-tools.

*calculate-install-2.2.0.0_p20100921 (21 Sep 2010)

  21 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-2.2.0.0_p20100921.ebuild:
  Daily update.

*calculate-install-2.2.0.0_p20100915 (15 Sep 2010)

  15 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100910.ebuild,
  +calculate-install-2.2.0.0_p20100915.ebuild:
  Daily update.

*calculate-install-2.2.0.0_p20100907 (07 Sep 2010)

  07 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100906-r1.ebuild,
  +calculate-install-2.2.0.0_p20100907.ebuild: