@@ -10,8 +10,8 @@ EBUILD calculate-lib-2.1.9-r1.ebuild 730 RMD160 04e6029a7220a267356eb463d1bad3e9
 EBUILD calculate-lib-2.2.0.0_p20100826-r1.ebuild 788 RMD160 56d44285f4fd8021566f1513eae52257458b0fca SHA1 12b807476ee9b8044c75a52e47fead4888d19302 SHA256 7efc149c671b088c2830ea3c0a4046c64858acd6bf9d16c09aa5ea9e17eed9e4
 EBUILD calculate-lib-2.2.0.0_p20100902-r1.ebuild 864 RMD160 72ecda2f339257ab188792b0c25e9a5508495a41 SHA1 1eb455bf10a6dd1af94ca4abae9c33f1fc47ae2f SHA256 6358f5da87c71a429887f2a51f0c0f56e88e3bf077cfeb655926a7ac948e9681
 EBUILD calculate-lib-2.2.0.0_p20100915.ebuild 864 RMD160 5f540750a4849a3069616aadbd0bc60a24bb5838 SHA1 7df7cbed8d4be275e406bd198867269cf8dece8e SHA256 a5db486bb417a33869b7bb3d0395a4a35f841bb76dbba7880efa3b92b74a6d43
-EBUILD calculate-lib-2.2.0.0_p20100930-r1.ebuild 852 RMD160 e37af80c7d157777cc82fcb6aa31abfe09c03405 SHA1 ed85a37e7ba0e8f6442fccb5c034dc218a8041a7 SHA256 b481dac65f314b3d2584c43ca6f86005a6b143b19dcb0fab2efe1c029bae4f80
+EBUILD calculate-lib-2.2.0.0_p20100930-r2.ebuild 917 RMD160 7ac291e46388ba35976b61200b95dcc5d65a5cff SHA1 8fc65f8e96e1eb790af6f0b8ec1cd468753cbeee SHA256 c38a6374101fc4ddec11e1c8896dddb3a556b2477920923789df5bebe41e323c
 EBUILD calculate-lib-2.2.9999.ebuild 592 RMD160 e559e7ccafdb150093a055b4f90bf33666ab796c SHA1 752fe9e05ce1380af9a44bf5e81a56dc00f36506 SHA256 f4cf5511cca3007b735cf98871ee72442c6bf677be63349058d1bb029a4b1abf
 EBUILD calculate-lib-9999.ebuild 476 RMD160 e510e0aa98b7f6da9acc37197073cac0d5d6a47f SHA1 393c416fcfd77d6c05aea8932a7a1e3805aa926d SHA256 a9eee592ec352db7852e93ad33249072307051d3bda6cfdcd034ea9b96747578
-MISC ChangeLog 7141 RMD160 018cf8f4aba02bbc7fa96e00bec3ede9f4f0ba1e SHA1 7ddc2bccce3c281b2d6ce9a2080bf2e949c03a82 SHA256 86ed8aca5b290a6b401da5e2b6b0448af777f2c655c13f72d514f7673ae42dba
+MISC ChangeLog 7416 RMD160 881bb1f2d3505131c4073ac572e407449a69d7dd SHA1 0dd037f3644ee3225537b6c29b4d9be5113c5fd8 SHA256 e210b3e531ad24a092f79b93f2c8ea1149cfc703a4a25eb70800c98834948498
 MISC metadata.xml 303 RMD160 774b65ed76939d6878496ad6ef6451849bdced05 SHA1 7d08569697a290ede98c88ab59db3cdc3037bd15 SHA256 181519d9679fd9aee9a7a9806733a50728d3da0b1e0ad54f31499200f7f5c6ec
