@@ -1,7 +1,7 @@
 EBUILD calculate-templates-2.2.0.0_p20100826.ebuild 637 RMD160 f315066b0a62588ae478a2b52744ecc1973e914b SHA1 929d020829cf75e825330f61cf45b95fe3454404 SHA256 d1e793b9d72116d1735447d67af157bf9a479349c6f3542c54747359573b0d62
 EBUILD calculate-templates-2.2.0.0_p20100902.ebuild 637 RMD160 5764ad2895845c952f88903c3359fc4b50696046 SHA1 c8cd0a7aea92fc01f5b9ccde3bb841a05593ab69 SHA256 a84b018b354aa0713827d56bd62e7548074baf553d599a2c6d66b8ba4365a521
 EBUILD calculate-templates-2.2.0.0_p20100915.ebuild 637 RMD160 c355d93ad9c434e2b0a5e3a2c0227d2b63ae8744 SHA1 c3b0b73c24ff5885bfe88dee2f1c6cc8175bcf4d SHA256 f3956cdbea98268181248b1c858482ca65fc2c3d9942a3cf1557bc3127df60d2
-EBUILD calculate-templates-2.2.0.0_p20100930-r1.ebuild 637 RMD160 ca5eb592bea4645efad4705441403c941910641c SHA1 73eae9f098c3b95b042ef5cfbb42894b686d53a6 SHA256 dfcfdffe833c6768d37f341236bbacf06333dede7078b2701b0cd3053527926d
+EBUILD calculate-templates-2.2.0.0_p20100930-r2.ebuild 637 RMD160 2e5b0ca039e7fa24f0f09d0d2483a5240fe7b1c4 SHA1 a806f515392708d974f323448def8efaf79b16b0 SHA256 6cd2763d094f74c1174f495c15bc1fa87f2f5ffc8f1823b12b1301a822739f9e
 EBUILD calculate-templates-2.2.9999.ebuild 572 RMD160 f3863438bdc490429c0fe18ff2e885ee566c3e61 SHA1 d9baafda4369d59124caa73245d3f8ec10613382 SHA256 13edc4707924171922107591bf9dd842e350aaaac9874505e039b0a68b093e70
-MISC ChangeLog 4863 RMD160 8c777c68a5f762e899822a2a77e843c2b93f6b95 SHA1 2f89f94da2dc8e97a899485f2fa0b3643aaf51a9 SHA256 f121476374dca9dcfdd49e82cc845a0bc23ef9b8eb551de56acf8dd02393d1e9
+MISC ChangeLog 5130 RMD160 30d03a2924685634c5401168b77d9fdb96e9cbcf SHA1 54bd5591c025e63b9a7eb6534046965d001d5afe SHA256 b9a0992a623c2cf694483eb0b46fdc8177839cb093f0935efabd45e43b0de789
 MISC metadata.xml 338 RMD160 4a1a51881bdf09b961217d2056114ca4ccb8b4d2 SHA1 5fcb2724427f9ac5dda07abb5c829c24e6db9ae6 SHA256 175d9ae86b71b291a519414e816b05290d0e4be74726cc8d5449a500c51a3b2d
