@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-templates-2.2.0.0_p20100930-r2 (01 Oct 2010)
+
+  01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-templates-2.2.0.0_p20100930-r1.ebuild,
+  +calculate-templates-2.2.0.0_p20100930-r2.ebuild:
+  Update version. Some changes in templates.
+
 *calculate-templates-2.2.0.0_p20100930-r1 (01 Oct 2010)
 
   01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
