@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-2.2.0.0_p20100930-r5 (01 Oct 2010)
+
+  01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-install-2.2.0.0_p20100930-r4.ebuild,
+  +calculate-install-2.2.0.0_p20100930-r5.ebuild:
+  Update version for fix partition mounting. Ssh key moving. Added handbook.
+
 *calculate-install-2.2.0.0_p20100930-r3 (01 Oct 2010)
 
   01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
